--- a/bai1.html
+++ b/bai1.html
@@ -7,7 +7,7 @@
     <title>Information</title>
 </head>
 <body>
-    <h1>Chào mừng đến trang web của mình</h1>
+    <h1>Chào mừng đến trang web của Dương Đập Troai</h1>
     <img src="./1.jpg"/ <p> Đây là ảnh mình </p>
     <h2>Giới thiệu về mình</h2>
     <ul>
